--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -5,7 +5,7 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     <path
-        android:fillColor="#3DDC84"
+        android:fillColor="#E0218A"
         android:pathData="M0,0h108v108h-108z" />
     <path
         android:fillColor="#00000000"
@@ -13,12 +13,12 @@
         android:strokeWidth="0.8"
         android:strokeColor="#33FFFFFF" />
     <path
-        android:fillColor="#00000000"
+        android:fillColor="#E0218A"
         android:pathData="M19,0L19,108"
         android:strokeWidth="0.8"
         android:strokeColor="#33FFFFFF" />
     <path
-        android:fillColor="#00000000"
+        android:fillColor="#ED5C9B"
         android:pathData="M29,0L29,108"
         android:strokeWidth="0.8"
         android:strokeColor="#33FFFFFF" />
