--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background"
-    android:backgroundTint="#8B2AD1"
-    android:backgroundTintMode="add"
     tools:context=".MainActivity">
 
     <Button
@@ -40,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="monospace"
-            android:text="LAB 4 - IoT"
+            android:text="Lab 4 - IoT"
             android:textAlignment="center"
             android:textSize="48sp"
             android:textStyle="bold" />
