--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,30 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="24"
+    android:viewportHeight="24"
+    android:tint="#F6F6F6">
+  <group android:scaleX="0.58"
+      android:scaleY="0.58"
+      android:translateX="5.04"
+      android:translateY="5.04">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="@android:color/white"
+        android:pathData="M12,11c1.66,0 3,-1.34 3,-3s-1.34,-3 -3,-3S9,6.34 9,8S10.34,11 12,11z"/>
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M12,12c-1.84,0 -3.56,0.5 -5.03,1.37C6.36,13.72 6,14.39 6,15.09V17h12v-1.91c0,-0.7 -0.36,-1.36 -0.97,-1.72C15.56,12.5 13.84,12 12,12z"/>
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M21.23,8.15l1.85,-0.77c-1.22,-2.91 -3.55,-5.25 -6.46,-6.46l-0.77,1.85C18.27,3.79 20.21,5.73 21.23,8.15z"/>
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M8.15,2.77L7.38,0.92C4.47,2.14 2.14,4.47 0.92,7.38l1.85,0.77C3.79,5.73 5.73,3.79 8.15,2.77z"/>
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M2.77,15.85l-1.85,0.77c1.22,2.91 3.55,5.25 6.46,6.46l0.77,-1.85C5.73,20.21 3.79,18.27 2.77,15.85z"/>
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M15.85,21.23l0.77,1.85c2.91,-1.22 5.25,-3.55 6.46,-6.46l-1.85,-0.77C20.21,18.27 18.27,20.21 15.85,21.23z"/>
+  </group>
 </vector>
