--- a/app/src/main/res/layout/fragment_magnetometro.xml
+++ b/app/src/main/res/layout/fragment_magnetometro.xml
@@ -3,12 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_background"
     tools:context=".fragmentos.MagnetometroFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="monospace"
+            android:text="Magnetómetro"
+            android:textAlignment="center"
+            android:textSize="34sp" />
+
+        <Button
+            android:id="@+id/btnGoToAcele"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:layout_weight="1"
+            android:text="Ir a Acelerómetro" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="500dp" />
+
+    </LinearLayout>
 
 </FrameLayout>
