--- a/app/src/main/res/layout/fragment_acelerometro.xml
+++ b/app/src/main/res/layout/fragment_acelerometro.xml
@@ -28,6 +28,7 @@
             android:text="Ir a Magnetómetro" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycledview2"
             android:layout_width="match_parent"
             android:layout_height="506dp" />
 
