--- a/app/src/main/res/layout/fragment_magnetometro.xml
+++ b/app/src/main/res/layout/fragment_magnetometro.xml
@@ -29,6 +29,7 @@
             android:text="Ir a Acelerómetro" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview1"
             android:layout_width="match_parent"
             android:layout_height="508dp" />
 
