--- a/app/src/main/res/layout/contact_irv.xml
+++ b/app/src/main/res/layout/contact_irv.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imageViewContact"
         android:layout_width="130dp"
         android:layout_height="171dp"
         android:layout_marginStart="16dp"
